--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body>
     <h1>欢迎来到我的文本库</h1>
     <ul>
-        <li><a href="files/示例文本.txt">示例文本.txt</a></li>
+        <li><a href="示例文本.txt">示例文本.txt</a></li>
         <!-- 继续添加更多文件链接 -->
     </ul>
 </body>
+
 </html>
