--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <body>
     <h1>欢迎来到我的文本库</h1>
     <ul>
-        <li><a href="示例文本.txt">示例文本.txt</a></li>
-        <!-- 继续添加更多文件链接 -->
+        <li><a href="free.txt">free.txt</a></li>
+        <li><a href="3Klist.txt">3Klist.txt</a></li>
+        <li><a href="LEGlist.txt">LEGlist.txt</a></li>
+        <li><a href="Herolist.txt">Herolist.txt</a></li>
     </ul>
 </body>
-
 </html>
